k8s/manifests/radarr-anime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-anime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr-anime
  template:
    metadata:
      labels:
        app: radarr-anime
    spec:
      containers:
        - name: radarr-anime
          image: ghcr.io/linuxserver/radarr:6.3.0
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
              subPath: anime/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-anime-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: movies
          persistentVolumeClaim:
            claimName: media
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
