k8s/manifests/radarr-anime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-anime
spec:
  type: ClusterIP
  selector:
    app: radarr-anime
  ports:
    - port: 7878
      targetPort: 7878
